--- a/hardver/binary.html
+++ b/hardver/binary.html
@@ -81,6 +81,7 @@
     <p><a href="https://drive.google.com/file/d/1cW1MSSLX2HHErKb0UrsLptinZPvncVUH/view?usp=sharing" target=_blank>Számrendszerek, számábrázolások</a></p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
