--- a/hardver/haz.html
+++ b/hardver/haz.html
@@ -44,6 +44,7 @@
             <p><a href="https://drive.google.com/file/d/1GHhVhCx5pCyYq3vp-arkCPtMtv3UUq_q/view?usp=sharing" target=_blank>Máté István Zsolt: A ház, a tápegység és csatlakoztatása</a></p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
