--- a/hardver/kartyak.html
+++ b/hardver/kartyak.html
@@ -56,6 +56,7 @@
     <h3>Hálózati kártya</h3>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
