--- a/hardver/pc.html
+++ b/hardver/pc.html
@@ -82,6 +82,7 @@
     <p><a href="https://drive.google.com/file/d/1HIB8qw_bD0qc98a-O1kVh4WC-xifnFM6/view?usp=sharing" target=_blank>Király László: Mérések, mérőprogramok</a></p>
     </main>
     <footer>
+      <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
