--- a/mestint/nn.html
+++ b/mestint/nn.html
@@ -45,6 +45,7 @@
           <p>Neurális hálókkal megoldható feladatok. A neurális hálók típusai Tanítás tanítóval és tanító nélkül. A többrétegű perceptron (MLP) felépítése és tanítása. Aktivációs függvények és veszteségfüggvények. Error-back-propagation. Gradiens módszer, konjugált gradiens módszer, kvázi Newton-módszerek, a Levenberg-Marquardt-módszer. Az MLP tulajdonságai. Radiális bázis hálózatok (RBF). Büntető függvények. Regularizáció. Általánosított radiális bázis hálózatok. Magfüggvényes approximációk. Mély tanulási technikák. Autoencoder. Tartó vektor gépek (SVM). Az optimális hipersík. SVM szeparálásra és függvényközelítésre. A konvolúciós hálózat felépítése és használata. Az error-backpropagation konvolúciós hálózatra. Rekurrens hálózatok. Long short-term memory.</p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
