--- a/okt/okt.html
+++ b/okt/okt.html
@@ -160,6 +160,7 @@
             <p><a href="https://drive.google.com/file/d/10yPJnGGNahDZHoCWV9_1BQKN8MRF3lhu/view?usp=sharing" target=_blank>116-117. Számítógép felépítése</a></p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
