--- a/perif/scanner.html
+++ b/perif/scanner.html
@@ -44,6 +44,7 @@
         <p><a href="https://drive.google.com/file/d/1rnOJ-p5d5c_k36VBfegQDhadC6S6Zdso/view?usp=sharing" target=_blank>Gyuris Károly: A szkenner és csatlakoztatásuk</a></p>
     </main>
     <footer>
+      <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
