--- a/rendszer/os.html
+++ b/rendszer/os.html
@@ -118,6 +118,7 @@
             <p><a href="https://www.wikihow.com/Make-a-Computer-Operating-System" target=_blank>How to make a computer operating system</a></p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
