--- a/rendszer/segedpr.html
+++ b/rendszer/segedpr.html
@@ -55,6 +55,7 @@
             <p>Az adatok (állományok) struktúrája egy soklaphoz hasonló, az átlóival: minden állományközi kapcsolatot meg kell adni, hogy a keresés könnyű legyen.</p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
