--- a/hardver/nummat.html
+++ b/hardver/nummat.html
@@ -114,6 +114,7 @@
           <p><a href="https://drive.google.com/file/d/1Fc8ZO8QyLfXLTwyoIdZGulxSbKKfapQI/view?usp=sharing" target=_blank>11. A parciális differenciálegyenletek numerikus módszerek</a></p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
