--- a/hardver/tapakku.html
+++ b/hardver/tapakku.html
@@ -54,6 +54,7 @@
         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/G5McJw4KkG8?si=ikIYS2hK3TA6tG8-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
     </main>
     <footer>
+      <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
