--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
       </section>
     </main>
     <footer>
+      <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
