--- a/kozpontiegyseg/logkapu.html
+++ b/kozpontiegyseg/logkapu.html
@@ -76,6 +76,7 @@
             <p>Integrated circuit, IC</p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
