--- a/kozpontiegyseg/logmuv.html
+++ b/kozpontiegyseg/logmuv.html
@@ -89,6 +89,7 @@
             <p><a href="https://drive.google.com/file/d/1_JszP2IlTcvg0aqUasQy3QknS7zRotOl/view?usp=sharing" target=_blank>7. A rezolúciós kalkulus</a></p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
