--- a/mestint/ml.html
+++ b/mestint/ml.html
@@ -51,6 +51,7 @@
           <p>Bevezetés a mély tanulásba. Logisztikus regresszió. Neurális hálók. Feedforward hálózatok. Backpropagation algoritmus. Súly inicializálási módszerek. Optimalizálás. Sztochasztikus gradiens módszer és változatai. Momentum. Regularizáció. Célfüggvények. Konvolúciós neurális hálók. Összevonó rétegek, dropout, normalizálás. Reprezentációtanulás. Vizualizáció. Mély konvolúciós neurális hálózatok. Rekurrens neurális hálózatok. Fejlett rekurrens és rekurzív neurális hálózatok. Önkódoló rendszerek. Generatív modellek. Ensemble módszerek.</p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
