--- a/mestint/pyai.html
+++ b/mestint/pyai.html
@@ -68,6 +68,7 @@
           <h1>Tengr.ai</h1>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
