--- a/office/kiadvany.html
+++ b/office/kiadvany.html
@@ -53,6 +53,7 @@
             <p>Fájlok: pub</p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
