--- a/office/szoveg.html
+++ b/office/szoveg.html
@@ -90,6 +90,7 @@
           <p>Szerkesztők: doPDF, PDF24, PDFsam</p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
