--- a/office/tablazat.html
+++ b/office/tablazat.html
@@ -89,6 +89,7 @@
           <p>Fájlok: xls, xlsx, ods</p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
