--- a/okos/okostelefon.html
+++ b/okos/okostelefon.html
@@ -45,6 +45,7 @@
         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=6fKKFeJEGExBl0Ga&amp;list=PL6rx9p3tbsMtRbJzFLswzvyl6OzHe32TC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
     </main>
     <footer>
+      <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
