--- a/perif/digitabla.html
+++ b/perif/digitabla.html
@@ -44,6 +44,7 @@
         <p><a href="https://drive.google.com/file/d/1tPaldYpL4clGd5ZM17usbuZo-czIWkl0/view?usp=sharing" target=_blank>Bedi Péter: Digitalizáló táblák</a></p>
     </main>
     <footer>
+      <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
