--- a/ptt/karbhiba.html
+++ b/ptt/karbhiba.html
@@ -58,6 +58,7 @@
           </ul>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
