--- a/rendszer/linux.html
+++ b/rendszer/linux.html
@@ -124,6 +124,7 @@
           <p><a href="https://hu.opensuse.org/Dokument%C3%A1ci%C3%B3/SL9.3/Rendszer/A_Linux-rendszer_ind%C3%ADt%C3%A1sa_%C3%A9s_be%C3%A1ll%C3%ADt%C3%A1sa" target=_blank>A Linux rendszerindítási folyamata</a></p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
