--- a/rendszer/unix.html
+++ b/rendszer/unix.html
@@ -45,6 +45,7 @@
             <p><a href="https://unixlinux.tmit.bme.hu/index.php?title=POSIX_ACL" target=_blank>POSIX ACL</a></p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
