--- a/rendszer/windows.html
+++ b/rendszer/windows.html
@@ -90,6 +90,7 @@
           <p><a href="https://www.origo.hu/techbazis/20090611-mindent-elarul-tulajdonosarol-a-windows-ha-okosan-kerdezik.html" target=_blank>Mindent tud a Windows a tulajdonosáról</a></p>
         </main>
         <footer>
+          <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
           <img src="../static/cc.logo.large.png" alt="cc">
         </footer>
       </body>
