--- a/aibegin.html
+++ b/aibegin.html
@@ -37,34 +37,40 @@
     </div>
 
     <div id="cim">
-      <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
+      <h1>Szuperszámítógép és mesterséges intelligencia</h1>
     </div>
 
     <main>
       <section>
         <aside>
-          <h2>Bevezető</h2>
-          <p>Weboldalunk azért jött létre, hogy feldolgozza az informatikai és távközlési alapok I. és II. tantárgy tananyagait, amelyek a számítógépes alapismereteket tartalmazzák. Megismerheted a számítógépes architektúrákat, az operációs rendszereket, az irodai szoftvereket, továbbá olyan egzotikumokat, mint a mesterséges intelligencia, mikrokontrollerek és okoseszközök.</p>
+          <h2>Szuperszámítógép</h2>
         </aside>
         <article>
-          <a href="okt/okt.html">Oktatási anyagok</a>
-          <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
+          <a href="#">Szuperszámítógép</a>
+          <a href="#">CRAY</a>
         </article>
       </section>
 
       <section>
         <aside>
-          <h2>Irodai szoftverek</h2>
-          <p><a href="office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
-          <p><a href="office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
-          <p><a href="office/kttint.html">Irodai szoftverek integrált használata</a></p>
+          <h2>Kvantumszámítógép</h2>
         </aside>
         <article>
-          <a href="office/tablazat.html">Táblázatkezelés</a>
-          <a href="office/szoveg.html">Szövegszerkesztés</a>
-          <a href="office/prezi.html">Prezentációkészítés</a>
-          <a href="office/kiadvany.html">Kiadványszerkesztés</a>
-          <a href="office/texlatex.html">TeX / LaTeX</a>
+          <a href="mikro/kvantumszg.html">Kvantumszámítógép</a>
+        </article>
+      </section>
+
+      <section>
+        <aside>
+          <h2>Mesterséges intelligencia</h2>
+          <p><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (4+6 óra)</a></p>
+        </aside>
+        <article>
+          <a href="#">Statisztika</a>
+          <a href="mestint/ai.html">Mesterséges intelligencia</a>
+          <a href="mestint/ml.html">Gépi tanulás</a>
+          <a href="mestint/nn.html">Neuronhálózatok</a>
+          <a href="mestint/pyai.html">Python nyelven</a>
         </article>
       </section>
     </main>
