--- a/bevbegin.html
+++ b/bevbegin.html
@@ -37,36 +37,37 @@
     </div>
 
     <div id="cim">
-      <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
+      <h1>Elmélet</h1>
     </div>
 
     <main>
-      <section>
-        <aside>
-          <h2>Bevezető</h2>
-          <p>Weboldalunk azért jött létre, hogy feldolgozza az informatikai és távközlési alapok I. és II. tantárgy tananyagait, amelyek a számítógépes alapismereteket tartalmazzák. Megismerheted a számítógépes architektúrákat, az operációs rendszereket, az irodai szoftvereket, továbbá olyan egzotikumokat, mint a mesterséges intelligencia, mikrokontrollerek és okoseszközök.</p>
-        </aside>
-        <article>
-          <a href="okt/okt.html">Oktatási anyagok</a>
-          <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
-        </article>
-      </section>
-
-      <section>
-        <aside>
-          <h2>Irodai szoftverek</h2>
-          <p><a href="office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
-          <p><a href="office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
-          <p><a href="office/kttint.html">Irodai szoftverek integrált használata</a></p>
-        </aside>
-        <article>
-          <a href="office/tablazat.html">Táblázatkezelés</a>
-          <a href="office/szoveg.html">Szövegszerkesztés</a>
-          <a href="office/prezi.html">Prezentációkészítés</a>
-          <a href="office/kiadvany.html">Kiadványszerkesztés</a>
-          <a href="office/texlatex.html">TeX / LaTeX</a>
-        </article>
-      </section>
+        <section>
+            <aside>
+              <h2>Elmélet</h2>
+            </aside>
+            <article>
+              <a href="hardver/infelm.html">Információelmélet</a>
+              <a href="hardver/binary.html">Kettes számrendszer</a>
+              <a href="hardver/nummat.html">Numerikus matematika 1.</a>
+              <a href="hardver/r.html">Numerikus programozás</a>
+            </article>
+          </section>
+    
+          <section>
+            <aside>
+              <h2>Központi egység</h2>
+              <p><a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák <i class="fa fa-external-link"></i></a></p>
+              <p><a href="https://www.youtube.com/playlist?list=PL-0Sm209resg6npAY367UUnDT_QfThPJj" target="_blank">Mingesz Róbert - Digitális architektúrák <i class="fa fa-external-link"></i></a></p>
+              <p><a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet <i class="fa fa-external-link"></i></a></p>
+            </aside>
+            <article>
+              <a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a>
+              <a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a>
+              <a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a>
+              <a href="kozpontiegyseg/cpu.html">CPU</a>
+              <a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a>
+            </article>
+          </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
