--- a/hardver/r.html
+++ b/hardver/r.html
@@ -30,11 +30,11 @@
             <h2><a href="../3d.html" title="Nyitóoldal">Számítógépes grafika és 3D modellezés</a></h2>
           </header>
           <nav>
-            <a href="../nav/rolunk.html">Rólunk</a>
-        <a href="#">Blog</a>
-        <a href="../nav/peldak.html">Példák</a>
-        <a href="#">Projektek</a>
-        <a href="../nav/vizsgak.html">Vizsgák</a>
+            <a href="../bevbegin.html">Elmélet</a>
+            <a href="../aibegin.html">MI</a>
+            <a href="../pcbegin.html">Gépek</a>
+            <a href="../mikrobegin.html">Mikro</a>
+            <a href="../vizsgak.html">Vizsgák</a>
           </nav>
         </div>
     
