--- a/perif/mic.html
+++ b/perif/mic.html
@@ -30,11 +30,11 @@
             <h2>TECHNOLOGIES</h2>
           </header>
           <nav>
-            <a href="../nav/rolunk.html">Rólunk</a>
-        <a href="#">Blog</a>
-        <a href="../nav/peldak.html">Példák</a>
-        <a href="#">Projektek</a>
-        <a href="../nav/vizsgak.html">Vizsgák</a>
+            <a href="../bevbegin.html">Elmélet</a>
+            <a href="../aibegin.html">MI</a>
+            <a href="../pcbegin.html">Gépek</a>
+            <a href="../mikrobegin.html">Mikro</a>
+            <a href="../vizsgak.html">Vizsgák</a>
           </nav>
         </div>
             
