--- a/aibegin.html
+++ b/aibegin.html
@@ -24,7 +24,7 @@
   <body>
     <div id="header">
       <header>
-        <h1>Palkotikum</h1>
+        <h1><a href="index.html" title="Kezdőlap">Palkotikum</a></h1>
         <h2>TECHNOLOGIES</h2>
       </header>
       <nav>
@@ -71,6 +71,24 @@
           <a href="mestint/ml.html">Gépi tanulás</a>
           <a href="mestint/nn.html">Neuronhálózatok</a>
           <a href="mestint/pyai.html">Python nyelven</a>
+        </article>
+      </section>
+
+      <section>
+        <aside>
+          <h2>Szöveg generálása</h2>
+        </aside>
+        <article>
+
+        </article>
+      </section>
+
+      <section>
+        <aside>
+          <h2>Kép generálása</h2>
+        </aside>
+        <article>
+
         </article>
       </section>
     </main>
