--- a/bevbegin.html
+++ b/bevbegin.html
@@ -24,7 +24,7 @@
   <body>
     <div id="header">
       <header>
-        <h1>Palkotikum</h1>
+        <h1><a href="index.html" title="Kezdőlap">Palkotikum</a></h1>
         <h2>TECHNOLOGIES</h2>
       </header>
       <nav>
@@ -66,6 +66,24 @@
               <a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a>
               <a href="kozpontiegyseg/cpu.html">CPU</a>
               <a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a>
+            </article>
+          </section>
+
+          <section>
+            <aside>
+              <h2>Cicada 3301</h2>
+            </aside>
+            <article>
+
+            </article>
+          </section>
+
+          <section>
+            <aside>
+              <h2>A marsi</h2>
+            </aside>
+            <article>
+              
             </article>
           </section>
     </main>
