--- a/mikrobegin.html
+++ b/mikrobegin.html
@@ -24,7 +24,7 @@
   <body>
     <div id="header">
       <header>
-        <h1>Palkotikum</h1>
+        <h1><a href="index.html" title="Kezdőlap">Palkotikum</a></h1>
         <h2>TECHNOLOGIES</h2>
       </header>
       <nav>
@@ -51,7 +51,23 @@
           <a href="mikro/arduino.html">Arduino</a>
           <a href="mikro/raspberry.html">Raspberry</a>
           <a href="#">MicroBit</a>
+        </article>
+      </section>
+
+      <section>
+        <aside>
+          <h2>Robotika</h2>
+        </aside>
+        <article>
           <a href="mikro/robotika.html">Robotika</a>
+        </article>
+      </section>
+
+      <section>
+        <aside>
+          <h2>Drónok</h2>
+        </aside>
+        <article>
           <a href="mikro/dron.html">Drónok</a>
         </article>
       </section>
