--- a/vizsgak.html
+++ b/vizsgak.html
@@ -26,7 +26,7 @@
       <body>
         <div id="header">
           <header>
-            <h1><a href="../index.html" title="Kezdőlap">Palkotikum</a></h1>
+            <h1><a href="index.html" title="Kezdőlap">Palkotikum</a></h1>
             <h2>TECHNOLOGIES</h2>
           </header>
           <nav>
