--- a/pcbegin.html
+++ b/pcbegin.html
@@ -24,7 +24,7 @@
   <body>
     <div id="header">
       <header>
-        <h1>Palkotikum</h1>
+        <h1><a href="index.html" title="Kezdőlap">Palkotikum</a></h1>
         <h2>TECHNOLOGIES</h2>
       </header>
       <nav>
