--- a/hardver/pc.html
+++ b/hardver/pc.html
@@ -29,6 +29,7 @@
         <h1><a href="../index.html" title="Kezdőlap">Palkotikum</a></h1>
         <h2>TECHNOLOGIES</h2>
       </header>
+      <nav>
         <a href="../bevbegin.html">Elmélet</a>
         <a href="../aibegin.html">MI</a>
         <a href="../pcbegin.html">Gépek</a>
