--- a/bevbegin.html
+++ b/bevbegin.html
@@ -41,6 +41,15 @@
     </div>
 
     <main>
+      <section>
+        <aside>
+          <h2>Bevezető</h2>
+        </aside>
+        <article>
+          <a href="okt/okt.html">Oktatási anyagok</a>
+          <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
+        </article>
+      </section>
         <section>
             <aside>
               <h2>Elmélet</h2>
