--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
       <section  id="elm"></section>
 
       <section id="ai"></section>
-      <section class="coral">
-        <a href="aibegin.html">
+      <section class="white">
+        <a href="aibegin.html" class="fekete">
           <h1>Mesterséges intelligencia</h1>
         </a>
       </section>
@@ -64,11 +64,18 @@
       </section>
 
       <section class="sarga">
-        <a href="vizsgak.html">
-          <h1>Vizsgák</h1>
+        <a href="http://palkoadam93.github.io/palkotikumnetworks" target="_blank">
+          <h1>Hálózatok <i class="fa fa-external-link"></i></h1>
         </a>
       </section>
       <section id="vizsgak"></section>
+
+      <section id="aiwoman"></section>
+      <section class="white">
+        <a href="vizsgak.html" class="fekete">
+          <h1>Vizsgák</h1>
+        </a>
+      </section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
