--- a/felh/office.html
+++ b/felh/office.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <link rel="stylesheet" href="static/main.css">
-    <link rel="stylesheet" href="static/mainindex.css">
+    <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="../static/mainindex.css">
 
     <title>Palkotikum</title>
 
@@ -24,37 +24,36 @@
   <body>
     <div id="header">
       <header>
-        <h1><a href="index.html" title="Kezdőlap">Palkotikum</a></h1>
+        <h1><a href="../index.html" title="Kezdőlap">Palkotikum</a></h1>
         <h2>TECHNOLOGIES</h2>
       </header>
       
     </div>
 
     <div id="cim">
-      <h1>Irodai szoftverek</h1>
+      <h1>A számítógép</h1>
     </div>
 
     <main>
       <section>
         <aside>
           <h2>Irodai szoftverek</h2>
-          <p><a href="office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
-          <p><a href="office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
-          <p><a href="office/kttint.html">Irodai szoftverek integrált használata</a></p>
+          <p><a href="../office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
+          <p><a href="../office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
+          <p><a href="../office/kttint.html">Irodai szoftverek integrált használata</a></p>
         </aside>
         <article>
-          <a href="office/tablazat.html">Táblázatkezelés</a>
-          <a href="office/szoveg.html">Szövegszerkesztés</a>
-          <a href="office/prezi.html">Prezentációkészítés</a>
-          <a href="office/kiadvany.html">Kiadványszerkesztés</a>
-          <a href="office/texlatex.html">TeX / LaTeX</a>
+          <a href="../office/tablazat.html">Táblázatkezelés</a>
+          <a href="../office/szoveg.html">Szövegszerkesztés</a>
+          <a href="../office/prezi.html">Prezentációkészítés</a>
+          <a href="../office/kiadvany.html">Kiadványszerkesztés</a>
+          <a href="../office/texlatex.html">TeX / LaTeX</a>
         </article>
       </section>
     </main>
-    
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
-      <img src="static/cc.logo.large.png" alt="cc">
+      <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
 </html>
