--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
 
     <link rel="stylesheet" href="static/main.css">
-    <link rel="stylesheet" href="static/mainkezd.css">
+    <link rel="stylesheet" href="static/mainindex.css">
 
     <title>Palkotikum</title>
 
@@ -29,53 +29,95 @@
       </header>
     </div>
 
-    <div class="cim">
+    <div id="cim">
       <h1>Üdvözöllek a Palkotikum Technologies nyitóoldalán!</h1>
       <p>Weboldalunk azért jött létre, hogy feldolgozza az informatikai és távközlési alapok I. és II. tantárgy tananyagait, amelyek a számítógépes alapismereteket tartalmazzák. Megismerheted a számítógépes architektúrákat, az operációs rendszereket, az irodai szoftvereket, továbbá olyan egzotikumokat, mint a mesterséges intelligencia, mikrokontrollerek és okoseszközök.</p>
     </div>
 
     <main>
-      <section  id="elm"></section>
-      <section class="sarga">
-        <a href="bevbegin.html">
-          <h1>Elmélet</h1>
-        </a>
+      <section>
+        <aside>
+          <h2>Elmélet 10 leckében</h2>
+          <ol>
+            <li><a href="hardver/infelm.html">Információelmélet & kódelmélet</a></li>
+            <li><a href="hardver/binary.html">Számrendszerek</a></li>
+            <li><a href="hardver/nummat.html">Numerikus matematika 1.</a></li>
+            <li><a href="kozpontiegyseg/logmuv.html">Logikai műveletek és kifejezések</a></li>
+            <li><a href="kozpontiegyseg/logkapu.html">Logikai kapuk és áramkörök</a></li>
+            <li><a href="kozpontiegyseg/aritcirc.html">Aritmetikai áramkörök</a></li>
+            <li><a href="kozpontiegyseg/cpu.html">CPU</a></li>
+            <li><a href="kozpontiegyseg/tarcirc.html">Tároló áramkörök</a></li>
+          </ol>
+        </aside>
+        <article>
+          <a href="okt/okt.html">Oktatási anyagok</a>
+          <a href="okt/szamtechtortenet.html">A számítástechnika története</a>
+          <a href="hardver/r.html">Numerikus programozás</a>
+          <a href="https://www.inf.u-szeged.hu/~tanacs/oktatas/szamitogep_architekturak_gd/index.html" target="_blank">Számítógép-architektúrák <i class="fa fa-external-link"></i></a>
+          <a href="https://www.youtube.com/playlist?list=PL-0Sm209resg6npAY367UUnDT_QfThPJj" target="_blank">Mingesz Róbert - Digitális architektúrák <i class="fa fa-external-link"></i></a>
+          <a href="https://www.falstad.com/circuit/" target="_blank">Falstad - Circuit Simulator Applet <i class="fa fa-external-link"></i></a>
+        </article>
       </section>
 
-      <section class="white">
-        <a href="aibegin.html" class="fekete">
-          <h1>Mesterséges intelligencia</h1>
-        </a>
-      </section>
-      <section id="ai"></section>
-
-      <section id="pc"></section>
-      <section class="blue">
-        <a href="pcbegin.html">
-          <h1>Gépek</h1>
-        </a>
+      <section>
+        <aside>
+          <h2>Felhasználói ismeretek</h2>
+        </aside>
+        <article>
+          <a href="felh/pcbegin.html">Személyi számítógép</a>
+          <a href="felh/opr.html">Operációs rendszerek</a>
+          <a href="felh/office.html">Irodai szoftverek</a>
+          <a href="vizsgak.html" class="fekete">Vizsgák</a>
+        </article>
       </section>
 
-      <section class="white">
-        <a href="mikrobegin.html" class="fekete">
-          <h1>Elektronika</h1>
-        </a>
+      <section>
+        <aside>
+          <h2>Mesterséges intelligencia 10 leckében</h2>
+          <ol>
+            <li><a href="#">Statisztikai alapok</a></li>
+            <li><a href="mestint/ai.html">Mesterséges intelligencia</a></li>
+            <li><a href="mestint/ml.html">Gépi tanulás</a></li>
+            <li><a href="mestint/nn.html">Neuronhálózatok</a></li>
+            <li><a href="mestint/pyai.html">Python nyelven</a></li>
+            <li><a href="#">Szöveg generálása, ChatGPT</a></li>
+            <li><a href="#">Kép generálása, Tengr.ai</a></li>
+            <li><a href="#">Szuperszámítógép</a></li>
+            <li><a href="#">Kvantumszámítógép</a></li>
+          </ol>
+        </aside>
+        <article>
+          <p><a href="ptt/mlnnai.html">Gépi tanulás, neuronhálózatok, mesterséges intelligencia (4+6 óra)</a></p>
+        </article>
       </section>
-      <section id="robot"></section>
 
-      <section id="vizsgak"></section>
-      <section class="sarga">
-        <a href="http://palkoadam93.github.io/palkotikumnetworks" target="_blank">
-          <h1>Hálózatok <i class="fa fa-external-link"></i></h1>
-        </a>
+      <section>
+        <aside>
+          <h2>Okoseszközök</h2>
+        </aside>
+        <article>
+          <a href="okos/okostelefon.html">Okostelefonok</a>
+          <a href="#">Okosóra</a>
+          <a href="#">Okosotthon</a>
+        </article>
       </section>
-
-      <section class="white">
-        <a href="vizsgak.html" class="fekete">
-          <h1>Vizsgák</h1>
-        </a>
+      
+      <section>
+        <aside>
+          <h2>Elektronika és robotika 10 leckében</h2>
+          <ol>
+            <li><a href="mikro/bevelektr.html">Mikroelektronika</a></li>
+            <li><a href="mikro/arduino.html">Arduino</a></li>
+            <li><a href="mikro/raspberry.html">Raspberry</a></li>
+            <li><a href="#">MicroBit</a></li>
+            <li><a href="mikro/robotika.html">Robotika</a></li>
+            <li><a href="mikro/dron.html">Drónok</a></li>
+          </ol>
+        </aside>
+        <article>
+          <a href="ptt/bevelektr.html">Bevezetés az elektronikába (2+26 óra)</a>
+        </article>
       </section>
-      <section id="aiwoman"></section>
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
