--- a/PT.html
+++ b/PT.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
 
-    <title>Számítógépes rendszerek</title>
+    <title>Packet Tracer</title>
     <link rel="stylesheet" href="static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Számítógépes rendszerek</h1>
+      <h1>Packet Tracer</h1>
     </header>
 
     <main>
@@ -23,7 +23,14 @@
 
       </aside>
       <section>
+        <h1>Packet Tracer</h1>
 
+        <p><a href="https://drive.google.com/file/d/1kZR0dKvl-ZxE8I-fgeCAi7w0W3Ai8HYb/view?usp=sharing" target=_blank>Parancs segédlet 1</a></p>
+        <p><a href="https://drive.google.com/file/d/1dJsSBzix5LzdxYpt4oRY40kAH5CU6hIi/view?usp=sharing" target=_blank>Parancs segédlet 2</a></p>
+        <p><a href="https://drive.google.com/file/d/1khZUDMBhGNk9YTwL1bSAbqn5TBDXiFOW/view?usp=sharing" target=_blank>Bordé Sándor jegyzete</a></p>
+        <p><a href="https://drive.google.com/file/d/1hIXxmmV9mYMQBcx1jStReQ979qNU9Yl4/view?usp=sharing" target=_blank>SZE: Packet Tracer alapok</a></p>
+        <p><a href="https://drive.google.com/file/d/1P9h18XO0bSuCZvwkYetBX8yu4ZaE5Ntk/view?usp=sharing" target=_blank>SZE: Packet Tracer alapok</a></p>
+        <p><a href="https://drive.google.com/drive/folders/1HxwWlX-4uG7Y6Xva---T94DBG_e73Fho?usp=sharing" target=_blank>PACKET TRACER TANANYAGOK</a></p>
       </section>
     </main>
     <footer>
