--- a/felh/opr.html
+++ b/felh/opr.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Számítógépes rendszerek</title>
+    <title>Operációs rendszerek</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Számítógépes rendszerek</h1>
+      <h1>Operációs rendszerek</h1>
     </header>
 
     <main>
@@ -23,26 +23,22 @@
 
       </aside>
       <section>
-        <section>
-          <aside>
-            <h2>Operációs rendszerek</h2>
-            <p><a href="../ptt/virt.html">Virtualizáció és felhőtechnológiák (3+12 óra)</a></p>
-            <p><a href="../ptt/windows.html">Windows telepítése és konfigurációja (3+12 óra)</a></p>
-            <p><a href="../ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</a></p>
-            <p><a href="../ptt/linux.html">Linux alapok (7+11 óra)</a></p>
-            <p><a href="#">Linux alapismeretek (irodai informatikus)</a></p>
-          </aside>
-          <article>
-            <a href="../rendszer/os.html">Operációs rendszerek</a>
-            <a href="../rendszer/fajl.html">Fájlok, fájlrendszerek</a>
-            <a href="../rendszer/segedpr.html">Segédprogramok</a>
-            <a href="../rendszer/windows.html">Windows</a>
-            <a href="../rendszer/linux.html">Linux</a>
-            <a href="../rendszer/android.html">Android</a>
-            <a href="../rendszer/unix.html">Unix</a>
-            <a href="../rendszer/virt.html">Virtuális gépek és konténerek</a>
-          </article>
-        </section>
+        <h1>Programtanterv</h1>
+        <p><a href="../ptt/virt.html">Virtualizáció és felhőtechnológiák (3+12 óra)</a></p>
+        <p><a href="../ptt/windows.html">Windows telepítése és konfigurációja (3+12 óra)</a></p>
+        <p><a href="../ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</a></p>
+        <p><a href="../ptt/linux.html">Linux alapok (7+11 óra)</a></p>
+        <p><a href="#">Linux alapismeretek (irodai informatikus)</a></p>
+
+        <h3>Anyagok</h3>
+        <p><a href="../rendszer/os.html">Operációs rendszerek</a></p>
+        <p><a href="../rendszer/fajl.html">Fájlok, fájlrendszerek</a></p>
+        <p><a href="../rendszer/segedpr.html">Segédprogramok</a></p>
+        <p><a href="../rendszer/windows.html">Windows</a></p>
+        <p><a href="../rendszer/linux.html">Linux</a></p>
+        <p><a href="../rendszer/android.html">Android</a></p>
+        <p><a href="../rendszer/unix.html">Unix</a></p>
+        <p><a href="../rendszer/virt.html">Virtuális gépek és konténerek</a></p>
       </section>
     </main>
     <footer>
