--- a/felh/pcbegin.html
+++ b/felh/pcbegin.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Számítógépes rendszerek</title>
+    <title>Személyi számítógép</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Számítógépes rendszerek</h1>
+      <h1>Személyi számítógép</h1>
     </header>
 
     <main>
@@ -23,43 +23,36 @@
 
       </aside>
       <section>
-        <section>
-          <aside>
-            <h2>Személyi számítógép | Gépház</h2>
+        
+            <h1>Gépház</h1>
             <p><a href="../ptt/pc.html">A PC része, PC szét- és összeszerelése, bővítése (2+10 óra)</a></p>
             <p><a href="../ptt/karbhiba.html">Megelőző karbantartás és hibakeresés (2+8 óra)</a></p>
             <p><a href="../ptt/laptopok.html">Laptopok és más eszközök tulajdonságai, hibakeresés (2+8 óra)</a></p>
-          </aside>
-          <article>
-            <a href="../hardver/htmagn.html">Háttértárak</a>
-            <a href="../hardver/alaplap.html">Alaplap</a>
-            <a href="../hardver/kartyak.html">Hangkártya, videokártya, hálózati kártya</a>
-            <a href="../hardver/kabport.html">Adatkábelek és portok</a>
-            <a href="../hardver/tapakku.html">Tápegység, akkumulátor</a>
-            <a href="../hardver/haz.html">Ház</a>
-            <a href="../hardver/pc.html">Személyi számítógép</a>
-            <a href="../hardver/biosuefi.html">BIOS, UEFI</a>
-          </article>
-        </section>
-  
-        <section>
-          <aside>
-            <h2>Személyi számítógép | Perifériák</h2>
+
+            <h3>Anyagok</h3>
+            <p><a href="../hardver/htmagn.html">Háttértárak</a></p>
+            <p><a href="../hardver/alaplap.html">Alaplap</a></p>
+            <p><a href="../hardver/kartyak.html">Hangkártya, videokártya, hálózati kártya</a></p>
+            <p><a href="../hardver/kabport.html">Adatkábelek és portok</a></p>
+            <p><a href="../hardver/tapakku.html">Tápegység, akkumulátor</a></p>
+            <p><a href="../hardver/haz.html">Ház</a></p>
+            <p><a href="../hardver/pc.html">Személyi számítógép</a></p>
+            <p><a href="../hardver/biosuefi.html">BIOS, UEFI</a></p>
+
+            <h1>Perifériák</h1>
             <p><a href="../ptt/nyomtatok.html">Nyomtatók és egyéb perifériák (2+8 óra)</a></p>
             <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUC7531m0OaQ5ucsC89yvoq5" target="_blank">AnonimInc. - Perifériák <i class="fa fa-external-link"></i></a></p>
             <p><a href="https://www.youtube.com/playlist?list=PL5S7QW1qtdUAIprVHAPmgt5C-rvEvKURC" target="_blank">AnonimInc. - Mobil kiegészítők <i class="fa fa-external-link"></i></a></p>
-          </aside>
-          <article>
-            <a href="../perif/bill.html">Billentyűzet</a>
-            <a href="../perif/eger.html">Egér, touchpad</a>
-            <a href="../perif/printer.html">Nyomtató</a>
-            <a href="../perif/monitor.html">Monitorok és projektorok</a>
-            <a href="../perif/mic.html">Mikrofonok és hangszórók</a>
-            <a href="../perif/fenyk.html">Fényképező & kamera</a>
-            <a href="../perif/scanner.html">Scanner</a>
-            <a href="../perif/digitabla.html">Digitális tábla</a>
-          </article>
-        </section>
+
+            <h3>Anyagok</h3>
+            <p><a href="../perif/bill.html">Billentyűzet</a></p>
+            <p><a href="../perif/eger.html">Egér, touchpad</a></p>
+            <p><a href="../perif/printer.html">Nyomtató</a></p>
+            <p><a href="../perif/monitor.html">Monitorok és projektorok</a></p>
+            <p><a href="../perif/mic.html">Mikrofonok és hangszórók</a></p>
+            <p><a href="../perif/fenyk.html">Fényképező & kamera</a></p>
+            <p><a href="../perif/scanner.html">Scanner</a></p>
+            <p><a href="../perif/digitabla.html">Digitális tábla</a></p>
       </section>
     </main>
     <footer>
