--- a/hor/windowsserver2016.html
+++ b/hor/windowsserver2016.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Irodai szoftverek</title>
+    <title>Windows Server 2016</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Irodai szoftverek</h1>
+      <h1>Windows Server 2016</h1>
     </header>
 
     <main>
@@ -23,19 +23,14 @@
 
       </aside>
       <section>
+        <h1>Windows Server 2016</h1>
 
-            <h1>Programtanterv</h1>
-            <p><a href="../office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
-            <p><a href="../office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
-            <p><a href="../office/kttint.html">Irodai szoftverek integrált használata</a></p>
-          
-            <h3>Anyagok</h3>
-            <p><a href="../office/tablazat.html">Táblázatkezelés</a></p>
-            <p><a href="../office/szoveg.html">Szövegszerkesztés</a></p>
-            <p><a href="../office/prezi.html">Prezentációkészítés</a></p>
-            <p><a href="../office/kiadvany.html">Kiadványszerkesztés</a></p>
-            <p><a href="../office/texlatex.html">TeX / LaTeX</a></p>
-          
+        <h3>Introducing Windows Server 2016</h3>
+        <p><a href="https://drive.google.com/file/d/14b49LPNydWnNGZSQV4nnbPr2OA3yWHgd/view?usp=sharing" target=_blank>1. Introduction to Windows Server 2016</a></p>
+        <p><a href="https://drive.google.com/file/d/1wFDY7fLSa3M2K-6ENmqLrL7H3aMTzZIl/view?usp=sharing" target=_blank>2. Software-defined datacenter</a></p>
+        <p><a href="https://drive.google.com/file/d/1onOTZMlOlkq5NW4PbRxPh2HOwQOnoNhX/view?usp=sharing" target=_blank>3. Application platform</a></p>
+        <p><a href="https://drive.google.com/file/d/1eFFjjdEwaeY84Hnye4GSNxy7qP6o3fkQ/view?usp=sharing" target=_blank>4. Security and identity</a></p>
+        <p><a href="https://drive.google.com/file/d/1fxYqJbAR2zVpejY1duIK6-8__L1T0csU/view?usp=sharing" target=_blank>5. Systems management</a></p>
       </section>
     </main>
     <footer>
