--- a/ptthalo/halo210.html
+++ b/ptthalo/halo210.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Irodai szoftverek</title>
+    <title>Komplex hálózat tervezése, kialakítása</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Irodai szoftverek</h1>
+      <h1>Komplex hálózat tervezése, kialakítása</h1>
     </header>
 
     <main>
@@ -23,19 +23,8 @@
 
       </aside>
       <section>
-
-            <h1>Programtanterv</h1>
-            <p><a href="../office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
-            <p><a href="../office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
-            <p><a href="../office/kttint.html">Irodai szoftverek integrált használata</a></p>
-          
-            <h3>Anyagok</h3>
-            <p><a href="../office/tablazat.html">Táblázatkezelés</a></p>
-            <p><a href="../office/szoveg.html">Szövegszerkesztés</a></p>
-            <p><a href="../office/prezi.html">Prezentációkészítés</a></p>
-            <p><a href="../office/kiadvany.html">Kiadványszerkesztés</a></p>
-            <p><a href="../office/texlatex.html">TeX / LaTeX</a></p>
-          
+        <h1>Komplex hálózat tervezése, kialakítása</h1>
+        <p>A témakör tanításának célja, hogy a tanulók képesek legyenek egy nagyobb és összetettebb hálózatot tervezni, megvalósítani és konfigurálni úgy, hogy a hálózatban egy eszköz vagy kapcsolat meghibásodása a legkisebb kiesést okozza. A tanulók eddigi ismereteik alapján végezzék el egy komplex hálózat tervezését, dokumentálását, majd szimulációs szoftverben a hálózat működésének tesztelését. A tanulók végül fizikai eszközök használatával valósítsák meg a tervezett hálózatot. A témakör tanítása során csoportos projektmunka javasolt.</p>
       </section>
     </main>
     <footer>
