--- a/ptthalo/ieta20.html
+++ b/ptthalo/ieta20.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Irodai szoftverek</title>
+    <title>A dolgok internete</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Irodai szoftverek</h1>
+      <h1>A dolgok internete</h1>
     </header>
 
     <main>
@@ -23,19 +23,15 @@
 
       </aside>
       <section>
+        <h1>A dolgok internete</h1>
 
-            <h1>Programtanterv</h1>
-            <p><a href="../office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
-            <p><a href="../office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
-            <p><a href="../office/kttint.html">Irodai szoftverek integrált használata</a></p>
-          
-            <h3>Anyagok</h3>
-            <p><a href="../office/tablazat.html">Táblázatkezelés</a></p>
-            <p><a href="../office/szoveg.html">Szövegszerkesztés</a></p>
-            <p><a href="../office/prezi.html">Prezentációkészítés</a></p>
-            <p><a href="../office/kiadvany.html">Kiadványszerkesztés</a></p>
-            <p><a href="../office/texlatex.html">TeX / LaTeX</a></p>
-          
+        <p>A témakör célja az IoT (dolgok internete) fogalmának és gyakorlati megvalósítási lehetőségeinek bemutatása. A témakör elsajátítását követően a tanuló:</p>
+        <ul>
+          <li>Ismeri az IoT fogalmát, alkalmazási lehetőségeit, a szenzorok, mikrokontrollerek és beavatkozóelemek különböző típusait.</li>
+          <li>Képes prototípus készítésére a megvalósítandó IoT-projekthez.</li>
+          <li>Ismeri a Big Data és az automatizáció fogalmát.</li>
+          <li>Képes egyszerű IoT-projektek szimulációjára (Packet Tracerben) és megvalósítására valós eszközökkel (Arduino, Raspberry Pi).</li>
+        </ul>
       </section>
     </main>
     <footer>
