--- a/ptthalo/sef6.html
+++ b/ptthalo/sef6.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Irodai szoftverek</title>
+    <title>Alkalmazások üzemeltetése</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Irodai szoftverek</h1>
+      <h1>Alkalmazások üzemeltetése</h1>
     </header>
 
     <main>
@@ -23,19 +23,15 @@
 
       </aside>
       <section>
+        <h1>Alkalmazások üzemeltetése</h1>
 
-            <h1>Programtanterv</h1>
-            <p><a href="../office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
-            <p><a href="../office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
-            <p><a href="../office/kttint.html">Irodai szoftverek integrált használata</a></p>
-          
-            <h3>Anyagok</h3>
-            <p><a href="../office/tablazat.html">Táblázatkezelés</a></p>
-            <p><a href="../office/szoveg.html">Szövegszerkesztés</a></p>
-            <p><a href="../office/prezi.html">Prezentációkészítés</a></p>
-            <p><a href="../office/kiadvany.html">Kiadványszerkesztés</a></p>
-            <p><a href="../office/texlatex.html">TeX / LaTeX</a></p>
-          
+        <p>A témakör célja, hogy a tanulók megismerjék a hálózati környezetben működő alkalmazások telepítésének, karbantartásának alapvető módjait, valamint az ezzel kapcsolatos hibakeresés és elhárítás lépéseit. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
+        <ul>
+          <li>Alkalmazások telepítése</li>
+          <li>Alkalmazások verziófrissítése, migrációja</li>
+          <li>Biztonsági mentések elvégzése</li>
+          <li>Szoftverüzemeltetéshez kapcsolódó L2-es szintű hibaelhárítás, hibajegykezelés</li>
+        </ul>
       </section>
     </main>
     <footer>
