--- a/elm.html
+++ b/elm.html
@@ -20,7 +20,24 @@
 
     <main>
       <aside>
-
+        <nav>
+          <ul>
+            <li><a href="#">Elmélet</a></li>
+            <li><a href="elektr.html">Elektronika</a></li>
+            <li><a href="ai.html">Mesterséges intelligencia</a></li>
+            <li><a href="pcbegin.html">Személyi számítógép</a></li>
+            <li><a href="opr.html">Operációs rendszerek</a></li>
+            <li><a href="office.html">Irodai szoftverek</a></li>
+            <li><a href="okostelefon.html">Okoseszközök</a></li>
+            <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
+            <hr>
+            <li><a href="halozatok.html">Hálózati ismeretek</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
+            <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
+            <li></li>
+          </ul>
+        </nav>
       </aside>
       <section>
         <h2>Elmélet 10 leckében</h2>
