--- a/opr.html
+++ b/opr.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
 
-    <title>Informatikai biztonság</title>
+    <title>Operációs rendszerek</title>
     <link rel="stylesheet" href="static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Informatikai biztonság</h1>
+      <h1>Operációs rendszerek</h1>
     </header>
 
     <main>
@@ -26,13 +26,13 @@
             <li><a href="elektr.html">Elektronika</a></li>
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
-            <li><a href="opr.html">Operációs rendszerek</a></li>
-            <li><a href="office.html">Irodai szoftverek</a></li>
+            <li><a href="#">Operációs rendszerek</a></li>
+            <li><a href="felh/office.html">Irodai szoftverek</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
-            <li><a href="#">Informatikai biztonság</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
             <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
             <li></li>
@@ -40,10 +40,22 @@
         </nav>
       </aside>
       <section>
-        <h3>Informatikai biztonság</h3>
-        <p><a href="biztonsag/bizt.html">Hálózati biztonság</a></p>
-        <p><a href="biztonsag/alkbizt.html">Alkalmazások biztonsága</a></p>
-        <p><a href="biztonsag/kript.html">Kriptográfia</a></p>
+        <h1>Programtanterv</h1>
+        <p><a href="ptt/virt.html">Virtualizáció és felhőtechnológiák (3+12 óra)</a></p>
+        <p><a href="ptt/windows.html">Windows telepítése és konfigurációja (3+12 óra)</a></p>
+        <p><a href="ptt/egyebos.html">Egyéb operációs rendszerek (mobil és MacOS) (3+3 óra)</a></p>
+        <p><a href="ptt/linux.html">Linux alapok (7+11 óra)</a></p>
+        <p><a href="#">Linux alapismeretek (irodai informatikus)</a></p>
+
+        <h3>Anyagok</h3>
+        <p><a href="rendszer/os.html">Operációs rendszerek</a></p>
+        <p><a href="rendszer/fajl.html">Fájlok, fájlrendszerek</a></p>
+        <p><a href="rendszer/segedpr.html">Segédprogramok</a></p>
+        <p><a href="rendszer/windows.html">Windows</a></p>
+        <p><a href="rendszer/linux.html">Linux</a></p>
+        <p><a href="rendszer/android.html">Android</a></p>
+        <p><a href="rendszer/unix.html">Unix</a></p>
+        <p><a href="rendszer/virt.html">Virtuális gépek és konténerek</a></p>
       </section>
     </main>
     <footer>
