--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
             <li><a href="elm.html">Elmélet</a></li>
             <li><a href="elektr.html">Elektronika</a></li>
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
-            <li><a href="felh/pcbegin.html">Személyi számítógép</a></li>
-            <li><a href="felh/opr.html">Operációs rendszerek</a></li>
-            <li><a href="felh/office.html">Irodai szoftverek</a></li>
+            <li><a href="pcbegin.html">Személyi számítógép</a></li>
+            <li><a href="opr.html">Operációs rendszerek</a></li>
+            <li><a href="office.html">Irodai szoftverek</a></li>
+            <li><a href="okostelefon.html">Okoseszközök</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
@@ -41,11 +42,6 @@
 
       <section>
         <h1>Bemutatkozás</h1>
-
-        <h3>Okoseszközök</h3>
-        <p><a href="okos/okostelefon.html">Okostelefonok</a></p>
-        <p><a href="#">Okosóra</a></p>
-        <p><a href="#">Okosotthon</a></p>
       </section>
     </main>
     <footer>
