--- a/office.html
+++ b/office.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
 
-    <title>Informatikai biztonság</title>
+    <title>Irodai szoftverek</title>
     <link rel="stylesheet" href="static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Informatikai biztonság</h1>
+      <h1>Irodai szoftverek</h1>
     </header>
 
     <main>
@@ -27,12 +27,12 @@
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="opr.html">Operációs rendszerek</a></li>
-            <li><a href="office.html">Irodai szoftverek</a></li>
+            <li><a href="#.html">Irodai szoftverek</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
             <li><a href="halozatok.html">Hálózati ismeretek</a></li>
-            <li><a href="#">Informatikai biztonság</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
             <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
             <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
             <li></li>
@@ -40,10 +40,19 @@
         </nav>
       </aside>
       <section>
-        <h3>Informatikai biztonság</h3>
-        <p><a href="biztonsag/bizt.html">Hálózati biztonság</a></p>
-        <p><a href="biztonsag/alkbizt.html">Alkalmazások biztonsága</a></p>
-        <p><a href="biztonsag/kript.html">Kriptográfia</a></p>
+
+            <h1>Programtanterv</h1>
+            <p><a href="office/kttszoveg.html">Haladó szintű szövegszerkesztési ismeretek</a></p>
+            <p><a href="office/ktttablazat.html">Haladó szintű táblázatkezelési ismeretek</a></p>
+            <p><a href="office/kttint.html">Irodai szoftverek integrált használata</a></p>
+          
+            <h3>Anyagok</h3>
+            <p><a href="office/tablazat.html">Táblázatkezelés</a></p>
+            <p><a href="office/szoveg.html">Szövegszerkesztés</a></p>
+            <p><a href="office/prezi.html">Prezentációkészítés</a></p>
+            <p><a href="office/kiadvany.html">Kiadványszerkesztés</a></p>
+            <p><a href="office/texlatex.html">TeX / LaTeX</a></p>
+          
       </section>
     </main>
     <footer>
