--- a/okostelefon.html
+++ b/okostelefon.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Számítógépes rendszerek</title>
+    <title>Okoseszközök</title>
     <link rel="stylesheet" href="../static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,18 +15,47 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1>Számítógépes rendszerek</h1>
+      <h1>Okoseszközök</h1>
     </header>
 
     <main>
       <aside>
-
+        <nav>
+          <ul>
+            <li><a href="elm.html">Elmélet</a></li>
+            <li><a href="elektr.html">Elektronika</a></li>
+            <li><a href="ai.html">Mesterséges intelligencia</a></li>
+            <li><a href="pcbegin.html">Személyi számítógép</a></li>
+            <li><a href="opr.html">Operációs rendszerek</a></li>
+            <li><a href="office.html">Irodai szoftverek</a></li>
+            <li><a href="#">Okoseszközök</a></li>
+            <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
+            <hr>
+            <li><a href="halozatok.html">Hálózati ismeretek</a></li>
+            <li><a href="biztonsag.html">Informatikai biztonság</a></li>
+            <li><a href="szerverekesfelho.html">Szerverek és felhőszolgáltatások</a></li>
+            <li><a href="vizsgakhalo.html">Vizsgák (hálózatok)</a></li>
+            <li></li>
+          </ul>
+        </nav>
       </aside>
       <section>
-        <h1>Okostelefonok</h1>
+        <p>Tartalom</p>
+        <ul id="t">
+          <li><a href="#okost">Okostelefonok</a></li>
+          <li><a href="#okosora">Okosóra</a></li>
+          <li><a href="#okoso">Okosotthon</a></li>
+        </ul>
+
+
+        <h1 id="okost">Okostelefonok</h1>
 
         <h3>Branch Education - Exploring Smartphones</h3>
         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=6fKKFeJEGExBl0Ga&amp;list=PL6rx9p3tbsMtRbJzFLswzvyl6OzHe32TC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
+
+        <h1 id="okosora">Okosóra</h1>
+
+        <h1 id="okoso">Okosotthon</h1>
       </section>
     </main>
     <footer>
