--- a/okostelefon.html
+++ b/okostelefon.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
+    <link rel="shortcut icon" type="image/x-icon" href="static/Palkotikumicon.png">
 
     <title>Okoseszközök</title>
-    <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="static/main.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
+      <a href="index.html"><img src="static/Palkotikumlogo2.png" alt="p"></a>
       <h1>Okoseszközök</h1>
     </header>
 
@@ -60,7 +60,7 @@
     </main>
     <footer>
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
-      <img src="../static/cc.logo.large.png" alt="cc">
+      <img src="static/cc.logo.large.png" alt="cc">
     </footer>
   </body>
 </html>
