--- a/opr.html
+++ b/opr.html
@@ -27,7 +27,7 @@
             <li><a href="ai.html">Mesterséges intelligencia</a></li>
             <li><a href="pcbegin.html">Személyi számítógép</a></li>
             <li><a href="#">Operációs rendszerek</a></li>
-            <li><a href="felh/office.html">Irodai szoftverek</a></li>
+            <li><a href="office.html">Irodai szoftverek</a></li>
             <li><a href="okostelefon.html">Okoseszközök</a></li>
             <li><a href="vizsgak.html">Vizsgák (informatika)</a></li>
             <hr>
